<resources>
    <string name="app_name">GeoApp</string>
    <string name="boton_falso">FALSO</string>
    <string name="boton_cierto">CIERTO</string>
    <string name="boton_siguiente">SIGUIENTE</string>
    <string name="textopregunta">¿La peninsula de yucatan se encuentra al norte de mexico?</string>
    <string name="boton_anterior">ANTERIOR</string>
    <string name="texto_correcto">!CORRECTO!</string>
    <string name="texto_incorrecto">!INCORRECTO!</string>
    <string name="texto_aviso">¿Estas seguro de lo que haces?</string>
    <string name="texto_boton_mostrar_respuesta">Mostrar respuesta</string>
    <string name="texto_pregunta_1">¿La peninsula de Yucatan esta en el norte de Mexico?</string>
    <string name="texto_pregunta_2">Nuestro Sistema solar se encuentra en galaxia Via Lacea</string>
    <string name="texto_pregunta_3">El oceano mas grande de nuestro planera es el Oceano Pacifico</string>
    <string name="texto_pregunta_4">Los vientos alisios soplan del noreste al sureste</string>
    <string name="texto_pregunta_5">El estado mas grande de nuestra Republica Mexicana es Sonora</string>
    <string name="texto_boton_ver_respuesta">Ver respuesta</string>

</resources>
